feat : HistoryStyle 동기화 로직 추가